# slint-embed-test

./: Cargo.toml
src/: main.rs
ui/: appwindow.slint
