[package]
name = "embed-test"
version = "0.1.0"
authors = ["Tobias Hunger <tobias.hunger@slint-ui.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = { version = "1.0", path = "../slint/api/rs/slint" }
slint-interpreter = { version = "1.0", path = "../slint/internal/interpreter", default-features = false, features = ["std", "compat-1-0"] }
spin_on = "0.1"

[build-dependencies]
slint-build = { version = "1.0", path = "../slint/api/rs/build" }

